--- a/evento/pom.xml
+++ b/evento/pom.xml
@@ -26,6 +26,11 @@
 
 	<dependencies>
 		<dependency>
+		  <groupId>org.postgresql</groupId>
+		  <artifactId>postgresql</artifactId>
+		  <version>42.2.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>			
@@ -53,6 +58,12 @@
 			<scope>compile</scope>
 		</dependency>	
 		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>${commons-dbcp2.version}</version>
+			<scope>compile</scope>
+		</dependency>
 		
 	</dependencies>
 	<build>
